<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#ffff"
  android:orientation="vertical">
  
   	<android:TextView
 		android:text="@string/wave_failed"
 		android:id="@+id/waveFailedHeading"
 		style="@style/HeaderText" />
        
   	<android:TextView
		android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ff000000"
  		android:text="@string/money_found" />
        
    <android:TextView
    	android:id="@+id/moneyScavenged"
		android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="#ffff0000"
        android:paddingTop="5sp"
        android:textSize="55sp" />
        
    <android:Button
    	style="@style/Button"
    	android:text="@string/try_again_button"
    	android:id="@+id/tryAgainButton"
    	android:layout_gravity="center_horizontal" />
    	
    <android:Button
    	style="@style/Button"
    	android:text="@string/get_upgrades_button"
    	android:id="@+id/getUpgradesButton"
    	android:layout_gravity="center_horizontal" />
    	
    <android:Button
    	style="@style/Button"
    	android:text="@string/mainMenuButtonText"
    	android:id="@id/mainMenuButton"
    	android:layout_gravity="center_horizontal" />
  
</LinearLayout>
