<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#ffff"
        android:textColor="#ff000000">

        <TextView
            style="@style/HeaderText"
            android:text="@string/game_over_text"/>
        <TextView
            android:id="@+id/finalScore"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textColor="#ffff0000"
            android:paddingTop="5sp"
            android:textSize="55sp"
            />

        <TextView
            style="@style/HeaderText"
            android:text="@string/highscoreHeader" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/smallHighscoresTable"
            android:paddingLeft="20sp"
            android:paddingRight="20sp" />

            
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal"
                android:paddingBottom="15sp">
                    <Button
                       android:id="@+id/restartButton"
                       android:text="@string/restart_game_button"
                       style="@style/Button" />
                   <Button
                        android:id="@+id/mainMenuButton"
                        android:name="mainMenuButton"
                        style="@style/Button"
                        android:layout_marginLeft="20sp"
                        android:text="@string/mainMenuButtonText" />
        </LinearLayout>
</LinearLayout>