<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="#ffff">
  
  <TextView
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/upgrades_heading"
  	style="@style/HeaderText"
  	android:layout_gravity="center_horizontal" />
  
  <TableLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
	android:layout_marginLeft="20sp"
	android:layout_marginRight="20sp"
	android:layout_marginTop="20sp"
	android:stretchColumns="0">
  	<TableRow>
	  	<LinearLayout
	  		android:orientation="vertical">
	  		
		 	<android:TextView
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"
		  		android:id="@+id/ammoLabel"
		  		style="@style/SmallText"
		  		android:text="@string/ammoUpgradeLabel" />
	  		
	  		<android:TextView
	  			android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:id="@+id/currentAmmoLabel"
	  			style="@style/SmallText" />
	  		
	    </LinearLayout>
		
	    <android:Button
	    	style="@style/Button"
	    	android:id="@+id/addAmmoButton"
	    	android:text="@string/add_ammo_button"
	    	android:layout_gravity="center_vertical" />

  	</TableRow>
  	
  </TableLayout>
  
</LinearLayout>
